# whatsapp-ai-replier

./: .gitignore  README.md  TODO.md  WHATSAPP_AUTOMATION_DOCS.md  auto_signup.py  birthday.py  chat.py  event_loop.py  gemma_qlora_finetune.ipynb  live_reply.py  llm_client.py  main.py  prompt_to_message.py  prompts.py  pyproject.toml  reply_unanswered.py  requirements.txt  schemas.py  scrape.py  style_finetune.ipynb  test.py  test_chat_actions.py  test_whatsapp_automation.py  utils.py  whatsapp_automation.py
chatters/: simple_ai_chatter.py  trivial_chatter.py
conversations/: 723_20251020_152750.json  Ben_Blaker_20250929_111230.json  Matthew_Johnson_20250929_112456.json  conversation_example.json
fine_tuning_data/: fine_tune_data.json  gemma_qlora_finetune.ipynb
src/: .env.example  actions_handler.py  birthday.py  chat.py  config.py  event_loop.py  image_gen.py  llm_client.py  make_fine_tune_data.py  multi_event_loop.py  prompts.py  schemas.py  scrape.py  state.json  state_maintenance.py  utils.py  whatsapp_automation.py  whatsapp_functions.py
src/chatters/: __init__.py  autoClown.py  chate_statter.py  frautomator.py  image_echo_chatter.py  react_chatter.py  simple_ai_chatter.py  trivial_chatter.py
src/const/: example_chat.py
src/whatsapp_ai_replier/: __init__.py
user_data/: example.state.json  user_style_guide.example .txt
