[project]
name = "whatsapp-ai-replier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.59.0",
    "httpx==0.28.1",
    "loguru==0.7.2",
    "pydantic==2.5.0",
    "pydantic-settings==2.0.3",
    "rich==13.7.0",
    "selenium==4.15.2",
    "typer==0.16.0",
]
