[project]
name = "whatsapp-ai-replier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "anthropic==0.59.0",
    "bitsandbytes>=0.47.0",
    "datasets>=4.1.1",
    "einops>=0.8.1",
    "httpx==0.28.1",
    "ipykernel>=6.30.1",
    "loguru==0.7.2",
    "peft>=0.17.1",
    "pydantic==2.5.0",
    "pydantic-settings==2.0.3",
    "rich==13.7.0",
    "selenium==4.15.2",
    "transformers>=4.56.2",
    "trl>=0.23.0",
    "typer==0.16.0",
]
