[project]
name = "whatsapp-ai-replier"
version = "0.1.0"
description = "WhatsApp Web automation with LLM-powered replies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.59.0",
    "httpx==0.28.1",
    "loguru>=0.7.3",
    "pydantic-settings==2.0.3",
    "rich==13.7.0",
    "selenium==4.15.2",
    "typer==0.16.0",
    "python-dotenv>=1.0.1",
    "pyperclip>=1.11.0",
    "openai>=1.51.0",
    "pip>=25.2",
    "ipykernel>=7.0.1",
    "huggingface-hub>=0.35.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["*.tests", "tests*"]

[tool.setuptools.package-data]
src = ["state.json"]

[tool.pyright]
typeCheckingMode = "basic" #"strict"
pythonVersion = "3.11"
pythonPlatform = "Darwin"
venvPath = "."
venv = ".venv"
include = [
    ".",
    "src"
]
exclude = [
    "**/__pycache__/**",
    "**/.venv/**",
    "**/.git/**",
    "whatsapp_profile/**",
    "src/whatsapp_profile/**",
    "whatsapp_ai_replier.egg-info/**",
    "src/whatsapp_ai_replier.egg-info/**",
    "logs/**",
    "conversations/**"
]

[dependency-groups]
dev = [
    "pyright>=1.1.406",
]
